# mcc

./: CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  main.yml  remove-old-artifacts.yml
src/: analysis.c  analysis.h  argParser.c  argParser.h  assemble.c  assemble.h  ast.c  ast.h  astLower.c  astLower.h  colorText.c  colorText.h  driver.c  driver.h  file.c  file.h  ir.c  ir.h  lex.c  lex.h  lexString.c  lexString.h  lextoken.h  main.c  memory.c  memory.h  parser.c  parser.h  scanner.c  scanner.h  stream.c  stream.h  symbolTable.c  symbolTable.h  test.c  test.h  token.c  token.h  x64.c  x64.h  (+2 more)
test/: additionSpacing.har  commaVaArgs.har  errorDirective.har  ifDirectiveErrors.har  ifdefElse.har  initialLineMacro.har  irBuilderTest.c  longStringSpacing.har  macroVaArgs.har  macroinclude.har  noCommaVaArgs.har  noTrigraphs.har  nonMacroVaArgs.har  nulTokenMacros.har  objectJoining.har  optionalVariadac.har  re-examinaionExample.har  simpleifndef.har  stringificationEscape.har  test.c  test.har  test2.c  tokenJoinExample.har  trigraphs.har  vaArgsEOF.har  vregValidate.py
